src/components/znkExercise/scss/_znk-exercise-desktop.scss
znk-exercise.desktop {
    display: block;
    position: relative;

    .btn-section {
        .btn-container {
            position: absolute;
            top: 0;
            bottom: 0;
            align-items: center;
            display: flex;
            transition: all 0.2s linear;

            &.right-container {
                right: -40px;

                &.question-answered{
                    button{
                        background: $bgColor3;
                        svg-icon.znk-exercise-chevron .st0{
                            stroke: $bgColor6;
                        }
                    }
                }

                button {
                    border-top-right-radius: 42px;
                    border-bottom-right-radius: 42px;
                    padding-right: 3px;

                    .znk-exercise-chevron {
                        transform: rotate(-90deg);
                    }
                }

                &.ng-hide-add, &.ng-hide-remove {
                    transition: all linear 0.2s;
                }

                &.ng-hide {
                    right: 0;
                }
            }

            &.left-container {
                left: -40px;

                button {
                    border-top-left-radius: 42px;
                    border-bottom-left-radius: 42px;
                    padding-left: 5px;

                    .znk-exercise-chevron {
                        transform: rotate(90deg);
                    }
                }

                &.ng-hide-add, &.ng-hide-remove {
                    transition: all linear 0.2s;
                }

                &.ng-hide {
                    left: 0;
                }
            }

            button {
                height: 80px;
                width: 40px;
                background: #fbfafa;
                cursor: pointer;

                &:focus {
                    outline: none;
                }
            }
        }

        .done-btn-wrap, .review-btn-wrap {
            z-index: 3;
            width: 160px;
            position: absolute;
            right: 12px;
            bottom: 10px;
            height: 37px;

            .done-btn, .review-btn {
                width: 100%;
                height: 100%;
                background: #ff931e;
                color: $fcColor2;
                font: {
                    family: Lato;
                    size: 13px;
                    weight: normal;
                }
                border: {
                    radius: 30px;
                }
                cursor: pointer;
            }
        }
    }

    questions-carousel {
        &.znk-carousel-container {
            display: flex;
            position: absolute;
            top: 0;
            right: 0;
            bottom: 0;
            left: 0;
            background: $bgColor6;
            z-index: 1;
            border-radius: 15px;
            .znk-carousel {
                @include absolute-full-cover;

                .slide {
                    width: 100%;
                    height: 100%;

                    question-builder {
                        width: 100%;
                        height: 100%;
                    }
                }
                .swiper-slide-active {
                  height: 93%;
                }
            }
        }
    }

    button {
        padding: 0;
        border: {
            top: none;
            right: none;
            bottom: none;
            left: none;
        }
    }

}

